# nix-ci

./: .dockerignore  .gitignore  REFACTOR_NOTES.md  REFACTOR_TRIAGE.md  SCALE.md  SIMPLIFICATION_REPORT.md  SPEC.md  flake.nix
.github/workflows/: ci.yml
docs/: deployment-ha.md  design-stateless-coordinator.md  scale-xl-findings.md  shadow-mode.md  valkey-vs-memory-bench.md
nix/checks/: coordinator-ha-failover.nix  coordinator-smoke.nix  worker-smoke.nix
nix/flake/: dev-partition.nix
nix/nixosModules/: coordinator.nix  default.nix  worker.nix
nix/overlays/: default.nix
rust/: CHANGELOG.md  Cargo.toml  FOLLOWUPS.md  RUST_REVIEW.md  deny.toml
rust/crates/nix-ci/: Cargo.toml
rust/crates/nix-ci-core/: Cargo.toml
rust/crates/nix-ci-core/benches/: dispatcher.rs  valkey_vs_memory.rs
rust/crates/nix-ci-core/examples/: bench_runner.rs
rust/crates/nix-ci-core/migrations/: 0001_init.sql  0002_external_ref_unique.sql  0002_jobs_status_done_at_index.sql  0003_build_logs.sql  0004_failed_outputs_lookup_index.sql  0005_build_logs_job_fk.sql  0006_failed_outputs_worker_id.sql
rust/crates/nix-ci-core/src/: config.rs  error.rs  lib.rs  types.rs
rust/crates/nix-ci-core/src/client/: http.rs  mod.rs
rust/crates/nix-ci-core/src/dispatch/: claim.rs  mod.rs  rdep.rs  step.rs  steps.rs  submission.rs  worker_health.rs
rust/crates/nix-ci-core/src/durable/: cleanup.rs  logs.rs  mod.rs  reaper.rs  rehydrate.rs  writeback.rs
rust/crates/nix-ci-core/src/observability/: metrics.rs  mod.rs
rust/crates/nix-ci-core/src/runner/: artifacts.rs  drv_parser.rs  drv_walk.rs  eval_jobs.rs  fallback.rs  mod.rs  orchestrator.rs  output.rs  sse.rs  submitter.rs  worker.rs
rust/crates/nix-ci-core/src/server/: app.rs  build_logs.rs  claim.rs  complete.rs  events.rs  heartbeat.rs  ingest.rs  ingest_batch.rs  ingest_common.rs  jobs.rs  mod.rs  ops.rs  router.rs
rust/crates/nix-ci-core/tests/: admin_ops.rs  admin_refute.rs  api_contract.rs  artifacts_collection.rs  auth.rs  build_logs_obs.rs  cancel.rs  chaos.rs  claim_lease.rs  claim_lifecycle.rs  claim_lifetime_ceiling.rs  config_json.rs  contention.rs  degradation.rs  dispatcher_gc.rs  dispatcher_invariants_obs.rs  drv_parser_fuzz.rs  edge_cases.rs  eval_errors.rs  failure_propagation.rs  fleet.rs  http_e2e.rs  ingest_fuzz.rs  ingest_validation.rs  invariants.rs  load.rs  max_tries.rs  memory_bounds.rs  metrics.rs  observability.rs  oversized.rs  parser.rs  pg_faults.rs  pg_statement_timeout.rs  property.rs  reaper.rs  rehydrate.rs  reliability_caps.rs  repro_h10_zero_claim_deadline.rs  repro_h11_terminal_snapshot_failure_race.rs  (+24 more)
rust/crates/nix-ci-core/tests/common/: mod.rs
rust/crates/nix-ci-harness/: Cargo.toml
rust/crates/nix-ci-harness/src/: lib.rs
rust/crates/nix-ci-loom-checks/: Cargo.toml
rust/crates/nix-ci-loom-checks/src/: lib.rs
rust/crates/nix-ci-loom-checks/tests/: invariants.rs
rust/crates/nix-ci/src/: main.rs
scripts/: spec_report.sh
scripts/orbstack_harness/: README.md  ha-failover.sh  run.sh
scripts/orbstack_harness/coord-config/: sick-worker-contained.json  wide-fleet.json
scripts/orbstack_harness/profiles/: sick-worker-contained.sh  wide-fleet.sh
