[workspace]
members = ["crates/nix-ci-core", "crates/nix-ci"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.2.0"
publish = false

# Workspace-wide lints. Crates inherit via `[lints] workspace = true`.
# The clippy gates here are load-bearing for the 8 dispatcher
# invariants (esp. "no .await under a parking_lot lock") so keeping
# them as `deny` rather than `warn` means regressions hit CI, not
# production.
[workspace.lints.clippy]
# Invariant 5 in dispatch/mod.rs: no async code path may hold a
# parking_lot guard across an `.await`. The lint catches both
# std::sync::Mutex/RwLock and parking_lot's equivalents.
await_holding_lock = "deny"
# Cheap extra safety: catches borrowing a RefCell across an await.
# Same class of bug, different primitive.
await_holding_refcell_ref = "deny"

[workspace.dependencies]
nix-ci-core = { path = "crates/nix-ci-core" }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"

# HTTP server / client
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "http2"] }
eventsource-stream = "0.2"
parking_lot = "0.12"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Metrics
prometheus-client = "0.23"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Compression (worker-side log gzip + server-side gunzip)
flate2 = "1"
async-trait = "0.1"

# OpenTelemetry — distributed tracing. Only the pieces we actually use:
# `opentelemetry` for the core API, `opentelemetry_sdk` for the
# tracer + exporter plumbing, `opentelemetry-otlp` with HTTP/protobuf
# transport (no gRPC dep tree), `tracing-opentelemetry` to bridge the
# existing `tracing` spans into OTel.
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "reqwest-client", "trace"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"

# Test utilities
tempfile = "3"
