[package]
name = "nix-ci-core"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-stream.workspace = true
axum.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
parking_lot.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus-client.workspace = true
uuid.workspace = true
chrono.workspace = true
flate2.workspace = true
async-trait.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tempfile.workspace = true
rand = "0.8"
criterion = { version = "0.5", default-features = false, features = ["html_reports", "cargo_bench_support"] }

[[bench]]
name = "dispatcher"
harness = false
path = "benches/dispatcher.rs"

[features]
default = []
load-test = []
# Enable the expensive randomized chaos harness (tests/chaos.rs).
# Disabled by default so normal `cargo test` and tools like
# cargo-mutants don't re-run it for every mutation.
chaos-test = []

[lints]
workspace = true
