[package]
name = "nix-ci-core"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-stream.workspace = true
axum.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
parking_lot.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus-client.workspace = true
uuid.workspace = true
chrono.workspace = true
flate2.workspace = true
async-trait.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tempfile.workspace = true
rand = "0.8"
criterion = { version = "0.5", default-features = false, features = ["html_reports", "cargo_bench_support"] }
# `test-util` unlocks `tokio::time::{pause, advance, resume}` so tests
# can exercise reaper / claim-deadline logic in virtual time instead of
# wall clock. Unions with the lib's `full` tokio features at build
# time; production binaries don't link test-util.
tokio = { workspace = true, features = ["test-util"] }

[[bench]]
name = "dispatcher"
harness = false
path = "benches/dispatcher.rs"

[features]
default = []
load-test = []
# Enable the expensive randomized chaos harness (tests/chaos.rs).
# Disabled by default so normal `cargo test` and tools like
# cargo-mutants don't re-run it for every mutation.
chaos-test = []
# L3 scale-ladder tests. 1K-worker, tall-narrow, wide-flat variants
# plus memory-bound probes. Gated off normal `cargo test` because they
# take 60-300s each and saturate CI runners.
scale-test = []
# L4 degradation tests. Exercise overload shedding, PG fault
# injection, memory pressure — validate the "degrades gracefully"
# contract. Feature-gated because some tests deliberately push the
# coordinator past its SLO to prove shedding, not because the tests
# themselves are slow.
degradation-test = []
# L2 deterministic simulation harness. Drives the real dispatcher
# from a single-threaded, seed-replayable event schedule — millions
# of events per second, no tokio, no PG. Catches invariant
# violations that only appear in specific interleavings of ingest /
# complete / cancel / fail.
sim-test = []

[lints]
workspace = true
