[package]
name = "nix-ci-core"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-stream.workspace = true
axum.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
parking_lot.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus-client.workspace = true
uuid.workspace = true
chrono.workspace = true
flate2.workspace = true
async-trait.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tempfile.workspace = true
rand = "0.8"
criterion = { version = "0.5", default-features = false, features = ["html_reports", "cargo_bench_support"] }
# `test-util` unlocks `tokio::time::{pause, advance, resume}` so tests
# can exercise reaper / claim-deadline logic in virtual time instead of
# wall clock. Unions with the lib's `full` tokio features at build
# time; production binaries don't link test-util.
tokio = { workspace = true, features = ["test-util"] }
# Valkey/Redis client for the stateless-coordinator prototype bench.
# `fred` chosen over `redis` for async-first design, automatic
# pipelining, and Sentinel awareness — see docs/design-stateless-coordinator.md.
fred = { version = "9", default-features = false, features = ["i-std", "i-scripts", "transactions", "sentinel-client"] }
hdrhistogram = "7"
# Test-only: drive a Router through `ServiceExt::oneshot` to exercise
# middleware (catch_panic, auth) in isolation without standing up a
# full TCP server. axum pulls tower in as a direct dep but doesn't
# re-export `ServiceExt`; adding it here at dev scope avoids a
# production-dependency footprint bump.
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "dispatcher"
harness = false
path = "benches/dispatcher.rs"

# Head-to-head comparison: current in-memory single-node dispatcher
# vs a stateless-coordinator prototype backed by Valkey. Binary harness
# (not Criterion) because the interesting metric is end-to-end wall
# time + claim-latency histogram under a concurrent-worker workload,
# not per-op microbench.
#
# Run with:
#   1. Start a Valkey instance on 127.0.0.1:6379 (in nix devshell:
#      `valkey-server --daemonize yes --save '' --appendonly no`).
#   2. cargo bench --bench valkey_vs_memory -- <scenario>
#
# Where <scenario> is e.g. `1k`, `10k`, `stress`.
[[bench]]
name = "valkey_vs_memory"
harness = false
path = "benches/valkey_vs_memory.rs"

[features]
default = []
load-test = []
# Enable the expensive randomized chaos harness (tests/chaos.rs).
# Disabled by default so normal `cargo test` and tools like
# cargo-mutants don't re-run it for every mutation.
chaos-test = []
# L3 scale-ladder tests. 1K-worker, tall-narrow, wide-flat variants
# plus memory-bound probes. Gated off normal `cargo test` because they
# take 60-300s each and saturate CI runners.
scale-test = []
# L4 degradation tests. Exercise overload shedding, PG fault
# injection, memory pressure — validate the "degrades gracefully"
# contract. Feature-gated because some tests deliberately push the
# coordinator past its SLO to prove shedding, not because the tests
# themselves are slow.
degradation-test = []
# L2 deterministic simulation harness. Drives the real dispatcher
# from a single-threaded, seed-replayable event schedule — millions
# of events per second, no tokio, no PG. Catches invariant
# violations that only appear in specific interleavings of ingest /
# complete / cancel / fail.
sim-test = []

[lints]
workspace = true
