[package]
name = "nix-ci"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "nix-ci"
path = "src/main.rs"

[dependencies]
nix-ci-core.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

[lints]
workspace = true
